# twat-os

./: CHANGELOG.md  CLEANUP.txt  LOG.md  README.md  REPO_CONTENT.txt  TODO.md  VERSION.txt  cleanup.py  llms.txt  pyproject.toml
.cursor/rules/: 0project.mdc  filetree.mdc
.github/workflows/: push.yml  release.yml
src/twat_os/: __init__.py  paths.py  paths.toml
tests/: test_package.py
